removed useless compiler args